--- a/src/app/conctact/conctact.component.html
+++ b/src/app/conctact/conctact.component.html
@@ -31,13 +31,13 @@
                               <div class="col-md-12 bg-dark">
                                <div class="row">
                                   <div class="col-sm-6 form-group"><br>
-                                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" formControlName="nom" required>
+                                    <input class="form-control" id="name" name="name" placeholder="Name" type="text" formControlName="nomClient" required>
                                   </div>
                                   <div class="col-sm-12 form-group">
                                     <input class="form-control" id="email" name="email" placeholder="Email" type="email" formControlName="email" required>
                                   </div>
                                   <div class="col-sm-12 form-group">
-                                    <input class="form-control" id="phone" name="phone" placeholder="Phone" type="number" formControlName="numero" required>
+                                    <input class="form-control" id="phone" name="phone" placeholder="Phone" type="number" formControlName="telClient" required>
                                   </div>
                                </div>
                                <textarea class="form-control" id="comments" name="comments" placeholder="Comment" formControlName="message" rows="5"></textarea>
