--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -82,11 +82,11 @@
             </div>
             <div id="boutons" class="row"> 
             <button id="boutons retour" class="btn btn-lg btn-primary btn-block text-uppercase col-xs-6 col-md-2 col-lg-6 Vcenter" type="reset" (click)="retour($event)"> Précédent</button> 
-            <button id="Valider" class="btn btn-lg btn-primary btn-block text-uppercase col-xs-6 col-md-2 col-lg-8 Vcenter" type="submit" [disabled]="clientForm.invalid" >S'enregistrer</button>
+            <button id="Valider" class="btn btn-lg btn-primary btn-block text-uppercase col-xs-6 col-md-2 col-lg-8 Vcenter" type="submit"  >S'enregistrer</button>
            </div>
       </div>
    </div>
  </div>
 </form>
 </div>
-<!--  -->
+<!-- [disabled]="clientForm.invalid" -->
