--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,4 +1,4 @@
-<div class="bg-dark">
+<div class="">
 <form [formGroup]="clientForm" (ngSubmit)="submithandle()">
 <div id="parti1">
   <div class="row">
