--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -54,7 +54,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             
-        <img src="../assets/pics/household.jpg" alt="Image" width="180" height="180" align="left" style="margin-right:10px;">
+        <img src="../assets/pics/household.jpg" alt="Image" width="180" height="180" align="left" style="">
             
         <p style="text-align: justify;">Lorem ipsum dolLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -115,4 +115,4 @@
       <div class="panel-footer"><p style="text-align: center;">Ménage et Propreté</p></div>
   </div>
 </div>
-</div><br>
+</div>
