--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -290,7 +290,9 @@
            </div>
       </div>
 </div>
-<button  class="btn btn-primary" type="submit">Save<span class=" glyphicon glyphicon-ok
+<button  class="btn btn-primary" type="submit" (click)="showHtmlToaster()">Save<span class=" glyphicon glyphicon-ok
 
   "></span></button>
+  <div toastContainer></div>
+
 </form>
