--- a/src/app/administration/administration.component.html
+++ b/src/app/administration/administration.component.html
@@ -1,3 +1,100 @@
-<p>
-  administration works!
-</p>
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container" s>
+     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
+     <div class="mail-box">
+                     
+     <aside class="sm-side">
+                          <div class="user-head">
+                              <a class="inbox-avatar" href="javascript:;">
+                                  <img  width="64" hieght="60" src="../assets/SET1/pp.jpg">
+                              </a>
+                              <!--  -->
+                              <div class="user-name">
+                                  <h5><a href="#">Sen Menagere</a></h5>
+                                  <span><a href="#">Administration</a></span>
+                              </div>
+                              <a class="mail-dropdown pull-right" href="javascript:;">
+                                  <i class="fa fa-chevron-down"></i>
+                              </a>
+                          </div>
+                          <div class="inbox-body">
+                              <a href="#myModal" data-toggle="modal"  title="Compose"    class="btn btn-compose">
+                                  Compose
+                              </a>
+                              
+                                         
+                          </div>
+                          <ul class="inbox-nav inbox-divider">
+                              <li class="active">
+                                  <a (click)="visibiliteInscription()"><i class="fa fa-inbox"></i> Employees</a>
+    
+                              </li>
+                              <li>
+                                  <a  (click)="visibilitClient()"><i class="fa fa-external-link"></i>Clients</a>
+                              </li>
+                              <li>
+                                  <a href="#"><i class=" fa fa-envelope-o "></i>Envoie Email <span class="label label-info pull-right">30</span></a>
+                              </li>
+                              <li>
+                                  <a (click)="showHideInscription =!showHideInscription"><i class="fa fa-bookmark-o"></i> Important</a>
+                              </li>
+                              
+                              <li>
+                                  <a href="#"><i class=" fa fa-trash-o"></i> Trash</a>
+                              </li>
+                          </ul>
+                          
+                        
+    
+                          <div class="inbox-body text-center">
+                              <div class="btn-group">
+                                  <a class="btn mini btn-primary" href="javascript:;">
+                                      <i class="fa fa-plus"></i>
+                                  </a>
+                              </div>
+                              <div class="btn-group">
+                                  <a class="btn mini btn-success" href="javascript:;">
+                                      <i class="fa fa-phone"></i>
+                                  </a>
+                              </div>
+                              <div class="btn-group">
+                                  <a class="btn mini btn-info" href="javascript:;">
+                                      <i class="fa fa-cog"></i>
+                                  </a>
+                              </div>
+                          </div>
+    
+                      </aside>
+                      <!-- fin aside -->
+    
+                      <aside class="lg-side">
+                          <div class="inbox-head">
+                              <h3>Inbox</h3>
+                              <form action="#" class="pull-right position">
+                                  <div class="input-append">
+                                      <input type="text" class="sr-input" placeholder="Search Mail">
+                                      <button class="btn sr-btn" type="button"><i class="fa fa-search"></i></button>
+                                  </div>
+                              </form>
+                          </div>
+                          <div class="inbox-body" *ngIf="showHideClient" >
+                             
+                            <!-- table client -->
+                            <app-footer1></app-footer1>
+                            
+                            
+                          </div>
+                          <div class="inbox-body" *ngIf=" showHideInscription " >
+                             
+                              <!-- table client -->
+                              <app-tape-employer></app-tape-employer>
+                              
+                              
+                            </div>
+                      </aside>
+                  </div>
+    </div>
