--- a/src/app/client/client.component.scss
+++ b/src/app/client/client.component.scss
@@ -9,9 +9,25 @@ span
 {
   color: red;
 }
+label
+{
+  font-size: 20px;
+}
+#pay,#localite,#sexe,#typeidentification,input
+{
+  height: 40px;
+  font-size: 20px;
+}
+#inputConfirmPassword,#inputPassword,#inputEmail
+{
+  //width: 500px;
+  font-size: 20px;
+  height: 40px;
+}
 #boutons
 {
- //display: inline-block;
+ margin-top: 40px;
+ padding-left: 60px;
 }
 #buttonenregistrer
 {
@@ -30,7 +46,7 @@ span
 }
 #parti2
 {
-    background-color: blue;
+   // background-color: blue;
 }
 #Valider
 {
@@ -47,6 +63,12 @@ span
   //margin-right: 10px
 
 }
+#inputUserame
+  {
+    font-size: 20px;
+    height:30px;
+    margin-bottom: 20px;
+  }
 
 :root {
     --input-padding-x: 1.5rem;
@@ -167,27 +189,7 @@ span
     margin-bottom: 20px;
   }
   
-  #inputEmail
-  {
-    font-size: 20px;
-    height:30px;
-    margin-bottom: 20px;
-  }
   
-  #inputPassword
-  {
-    font-size: 20px;
-    height:30px;
-    margin-bottom: 20px;
-  }
-  
-  #inputConfirmPassword
-  {
-    font-size: 20px;
-    height:30px;
-    margin-bottom: 20px;
-  
-  }
   
 
 
