--- a/src/app/client/client.component.scss
+++ b/src/app/client/client.component.scss
@@ -16,6 +16,7 @@ span
 #buttonenregistrer
 {
     margin-top: 20px;
+    
 
 }
 // ///////@at-root
@@ -45,6 +46,7 @@ span
  // margin-bottom:20px;
   //margin-right: 50px;
   //margin-right: 10px
+  //font-size: 10px;
 
 }
 
