--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -60,7 +60,7 @@
  <div class="col-xs-6 col-md-6">
       <label for="textarea">Observation </label>
       <textarea class="form-control activation" id="observation" rows="5" maxlength="500" formControlName="observation" [ngClass]="{'form-control':true,'is-invalid':observation.invalid && observation.touched, 'is-valid':observation.valid && observation.touched}"></textarea>
-      <button class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter"id="buttonenregistrer" (click)="visibiliteDiv($event)" *ngIf="!suivant">Suivant</button>
+      <button  class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter"id="buttonenregistrer" (click)="visibiliteDiv($event)" *ngIf="!suivant">Suivant</button>
   </div>
  </div>
  </div>
@@ -84,7 +84,7 @@
                  <button id="boutons retour" class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter" type="reset" (click)="retour($event)"> Précédent</button> 
                </div>
                <div class="col-md-6 col-sm-6" >
-                 <button id="Valider" class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter" type="submit" [disabled]="clientForm.valid" >S'enregistrer</button>
+                 <button id="Valider" class="btn btn-lg btn-primary btn-block text-uppercase  Vcenter" type="submit" [disabled]="clientForm.invalid" >S'enregistrer</button>
                </div>
            </div>
       </div>
