--- a/src/app/recherche/tape-recherche/tape-recherche.component.html
+++ b/src/app/recherche/tape-recherche/tape-recherche.component.html
@@ -1,3 +1,4 @@
+
 <div class="container bootstrap snippet">
     <div class="row">
   	    	<div class="col-sm">
@@ -10,54 +11,41 @@
                     "></span></a></li>
                 <li><a data-toggle="tab" (click)="visibiliteAction()">Action <span class="glyphicon glyphicon-trash
                     "></span></a></li> 
-                    <li><a data-toggle="tab" (click)="visibiliteRecherche()">Adresse <span class="glyphicon glyphicon-search"></span></a></li> 
               </ul>
+
               <!-- lister -->
           <div class="tab-content" *ngIf="showListerEmployee">
             <div class="tab-pane active" id="home"><br>
-                <p>bojour lister</p>
-               <app-mes-emplyes></app-mes-emplyes>
+                <p>bojour Recherche</p>
+
+               <!-- recher -->
+               
               </div><!--/tab-pane-->
           </div><!--/tab-content-->
+
              <!-- ajouter -->
              <div class="tab-content">
                     <div class="tab-pane active" id="home" *ngIf="showAjouterEmployye"><br>
                         <h3><span class="glyphicon glyphicon-plus-sign"></span>Ajout d'un Employer</h3>
-                        <app-inscription></app-inscription>             
+                        
+                          
                       </div><!--/tab-pane-->
                   </div><!--/tab-content-->
                      <!-- action -->
           <div class="tab-content">
                 <div class="tab-pane active" id="home" *ngIf="showActionEmployee"><br>
-                    <p>bojour Action</p>
-                    <app-test2></app-test2>
+                    <p>REcherche Action</p>
+                      
+              
+            
+                
+                 
+                   
                   </div><!--/tab-pane-->
               </div><!--/tab-content-->
 
-                  <!-- Recherche -->
-          <div class="tab-content">
-                <div class="tab-pane active" id="home" *ngIf="showListerRecherche"><br>
-                    <p>recherche</p>
-                      
-                    <app-recherche-employee></app-recherche-employee>           
-                  </div><!--/tab-pane-->
-              </div><!--/tab-content-->
+
         </div><!--/col-9-->
     </div><!--/row-->
-    <script>
-    $(document).ready(function() {  
-var readURL = function(input) {
-    if (input.files && input.files[0]) {
-        var reader = new FileReader();
-
-        reader.onload = function (e) {
-            $('.avatar').attr('src', e.target.result);
-        }
-        reader.readAsDataURL(input.files[0]);
-    }
-}
-$(".file-upload").on('change', function(){
-    readURL(this);
-});
-});
-</script>
+    
+                                                      
