MAJ de tape-employee

--- a/src/app/employee/tape-employer/tape-employer.component.html
+++ b/src/app/employee/tape-employer/tape-employer.component.html
@@ -10,7 +10,10 @@
                     "></span></a></li>
                 <li><a data-toggle="tab" (click)="visibiliteAction()">Action <span class="glyphicon glyphicon-trash
                     "></span></a></li> 
-                    <li><a data-toggle="tab" (click)="visibiliteRecherche()">Adresse <span class="glyphicon glyphicon-search"></span></a></li> 
+                    <li><a data-toggle="tab" (click)="visibiliteRecherche()">Adresse <span class="glyphicon glyphicon-search"></span></a></li>
+                    <li><a data-toggle="tab" (click)="visibiliteRechercheSituation()">Situation Matrimoniale <span class="glyphicon glyphicon-search"></span></a></li>
+                    <li><a data-toggle="tab" (click)="visibiliteRechercheReligion()">Religion <span class="glyphicon glyphicon-search"></span></a></li>
+                    <li><a data-toggle="tab" (click)="visibiliteRechercheEmail()">Email <span class="glyphicon glyphicon-search"></span></a></li> 
               </ul>
               <!-- lister -->
           <div class="tab-content" *ngIf="showListerEmployee">
