--- a/src/app/employee/test2/test2.component.html
+++ b/src/app/employee/test2/test2.component.html
@@ -4,11 +4,11 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <!-- Team -->
-<section id="team" class="pb-5">
+<section id="team" class="pb">
     <div class="container">
         <div class="row">
             <!-- Team member -->
-            <div class="col-xs-12 col-sm-6 col-md-4"  *ngFor="let employee of listeEmploye">
+            <div class="col-xs-7 col-sm-6 col-md-3"  *ngFor="let employee of listeEmploye">
                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');" >
                     <div class="mainflip" >
                         <div class="frontside">
