--- a/src/app/employee/tape-employer/tape-employer.component.html
+++ b/src/app/employee/tape-employer/tape-employer.component.html
@@ -45,6 +45,15 @@
                     <app-recherche-employee></app-recherche-employee>           
                   </div><!--/tab-pane-->
               </div><!--/tab-content-->
+
+              <!-- RechercheSituation -->
+          <div class="tab-content">
+            <div class="tab-pane active" id="home" *ngIf="showListerRechercheSituation"><br>
+                <p> Situation</p>
+                 
+              </div><!--/tab-pane-->
+          </div><!--/tab-content-->
+
         </div><!--/col-9-->
     </div><!--/row-->
     <script>
