--- a/src/app/employee/tape-employer/tape-employer.component.html
+++ b/src/app/employee/tape-employer/tape-employer.component.html
@@ -62,6 +62,14 @@
               </div><!--/tab-pane-->
           </div><!--/tab-content-->
 
+          <!-- RechercheEmail -->
+          <div class="tab-content">
+            <div class="tab-pane active" id="home" *ngIf="showListerRechercheEmail"><br>
+                <p> Email</p>
+                 <app-recherche-email></app-recherche-email>
+              </div><!--/tab-pane-->
+          </div><!--/tab-content-->
+
         </div><!--/col-9-->
     </div><!--/row-->
     <script>
