--- a/src/app/employee/inscription/inscription.component.html
+++ b/src/app/employee/inscription/inscription.component.html
@@ -258,11 +258,8 @@
               </div>
             </div>
   </form>
-  <button  class="btn btn-success" type="submit" (click)="showSuccess()">Save<span class=" glyphicon glyphicon-ok"></span></button>
-<button  class="btn btn-danger" type="submit" (click)="showError()">Save<span class=" glyphicon glyphicon-ok"></span></button>
-<button  class="btn btn-default" type="submit" (click)="showWarning()">Save<span class=" glyphicon glyphicon-ok"></span></button>
-<button type="button" class="btn btn-success btn-block btn-raised" id="type-success" (click)="typeSuccess()">Success</button>
-
+<!--   <button  class="btn btn-success" type="submit" (click)="showSuccess()">Save<span class=" glyphicon glyphicon-ok"></span></button>
+ -->
 
 
 
