--- a/src/app/employee/recherche-email/recherche-email.component.html
+++ b/src/app/employee/recherche-email/recherche-email.component.html
@@ -16,7 +16,7 @@
   <div class="container">
       <div class="row">
           <!-- Team member -->
-          <div class="col-xs-7 col-sm-6 col-md-3"  *ngFor="let employee of rechercherReligion">
+          <div class="col-xs-7 col-sm-6 col-md-3"  *ngFor="let employee of rechercherEmail">
 <!--                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');" >
 -->                    
                    <div>
@@ -53,7 +53,7 @@
                                       <li class="list-inline-item">
                                               <a (click)='editeEmploye(employee)' target="_blank">
                                                       <i class="glyphicon glyphicon-pencil"></i>
-                                                  </a>
+                                              </a>
                                       </li>
                           
                                   </ul>
