--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,9 @@
 
 
-footer.footer{padding-top:4rem;padding-bottom:4rem}
+footer.footer{padding-top:4rem;padding-bottom:4rem;background-color: cadetblue; }
 
 li.list-inline-item a {
-    color: #fff;
+    color: rgb(28, 28, 31);
     text-decoration: none;
 }
 
