--- a/src/app/recherche/tape-recherche/tape-recherche.component.html
+++ b/src/app/recherche/tape-recherche/tape-recherche.component.html
@@ -5,7 +5,7 @@
             <ul class="nav nav-tabs">
                 <!-- <li class="active"><a data-toggle="tab">Home<span class="glyphicon glyphicon-list-alt
                         "></span></a></li> -->
-                <li class="active"><a data-toggle="tab" (click)="visibiliteLister()">Lister<span class="glyphicon glyphicon-list-alt
+                <li class="active"><a data-toggle="tab" (click)="visibiliteLister()">Niveau Etude<span class="glyphicon glyphicon-list-alt
                     "></span></a></li>
                 <li><a data-toggle="tab" (click)="visibiliteAjouter()">Ajouter<span class="glyphicon glyphicon-plus-sign
                     "></span></a></li>
