--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,4 +1,8 @@
-<app-nav1 id="nav"></app-nav1>
+<div>
+    <app-nav1></app-nav1>
+
+</div>
+
 <header class="masthead text-white ">
         <div class="overlay"></div>
         <div class="container slider-top-text">
@@ -116,3 +120,4 @@
   </div>
 </div>
 </div>
+<app-footer></app-footer>
