--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,13 +5,13 @@
                 <div class="col-md-offset-5 col-md-3">
                     <div class="form-login">
                     <h4>Sen Menageres</h4>
-                    <input type="text" id="userName" formControlName="login" class="form-control input-sm chat-input" placeholder="username" />
+                    <input type="text" id="userName" formControlName="login" required class="form-control input-sm chat-input" placeholder="username" />
                     <br/>
-                    <input type="text" id="userPassword" formControlName="password" class="form-control input-sm chat-input" placeholder="password" />
+                    <input type="text" id="userPassword" formControlName="password" required class="form-control input-sm chat-input" placeholder="password" />
                     <br/>
                     <div class="wrapper">
                     <span class="group-btn">     
-                    <button type="submit" class="btn btn-primary btn-md">login <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-sign-in"></i></button>
+                    <button type="submit"  class="btn btn-primary btn-md">login <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-sign-in"></i></button>
                     </span>
                     </div>
                     </div>
